--- a/_nord_rawlite.vcxproj
+++ b/_nord_rawlite.vcxproj
@@ -59,7 +59,7 @@
     <ApplicationType>Android</ApplicationType>
     <ApplicationTypeRevision>3.0</ApplicationTypeRevision>
     <ProjectName>_rawlite</ProjectName>
-    <RootNamespace>third</RootNamespace>
+    <RootNamespace>port</RootNamespace>
     <MinimumVisualStudioVersion>15.0</MinimumVisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
