--- a/nord_rawlite.vcxproj
+++ b/nord_rawlite.vcxproj
@@ -58,7 +58,7 @@
     <Keyword>Android</Keyword>
     <ApplicationType>Android</ApplicationType>
     <ApplicationTypeRevision>3.0</ApplicationTypeRevision>
-    <ProjectName>_rawlite</ProjectName>
+    <ProjectName>rawlite</ProjectName>
     <RootNamespace>port</RootNamespace>
     <MinimumVisualStudioVersion>15.0</MinimumVisualStudioVersion>
   </PropertyGroup>
@@ -96,16 +96,16 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings" />
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
-    <Import Project="..\..\..\operating_system\operating_system-android\Common.props" />
+    <Import Project="..\..\..\operating_system\operating_system-android\port.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
-    <Import Project="..\..\..\operating_system\operating_system-android\Common.props" />
+    <Import Project="..\..\..\operating_system\operating_system-android\port.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
-    <Import Project="..\..\..\operating_system\operating_system-android\Common.props" />
+    <Import Project="..\..\..\operating_system\operating_system-android\port.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
-    <Import Project="..\..\..\operating_system\operating_system-android\Common.props" />
+    <Import Project="..\..\..\operating_system\operating_system-android\port.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
